--- a/staff/roger-perez/goliath/goliath-app2/goliath/src/components/Sequence/index.sass
+++ b/staff/roger-perez/goliath/goliath-app2/goliath/src/components/Sequence/index.sass
@@ -8,6 +8,26 @@
     width: 15px
 .checkbox:checked
     color: red
+
+input[type='checkbox']:after
+    line-height: 1.5em
+    content: ''
+    display: inline-block
+    width: 20px
+    height: 20px
+    margin-top: -4px
+    margin-left: -4px
+    border: 1px solid rgb(192,192,192)
+    border-radius: 0.25em
+    background: rgb(224,224,224)
+    background-color: green
+    
+
+input[type='checkbox']:checked:after 
+    width: 20px
+    height: 20px
+    border: 3px solid #00ff00
+
     
 
 
