--- a/staff/roger-perez/goliath/goliath-app/src/components/Sequence/index.sass
+++ b/staff/roger-perez/goliath/goliath-app/src/components/Sequence/index.sass
@@ -13,20 +13,20 @@ input[type='checkbox']:after
     line-height: 1.5em
     content: ''
     display: inline-block
-    width: 20px
-    height: 20px
+    width: 22px
+    height: 22px
     margin-top: -4px
     margin-left: -4px
     border: 1px solid rgb(192,192,192)
     border-radius: 0.25em
-    background: rgb(224,224,224)
-    background-color: green
+    background-color: #4E8236
     
 
 input[type='checkbox']:checked:after 
-    width: 20px
-    height: 20px
-    border: 3px solid #00ff00
+    width: 22px
+    height: 22px
+    border: 3px solid #4E8236
+    background-image: radial-gradient(white, green)
 
     
 
